fixed shells scripts (win) + added marlin 0.9.2 (d3d/ogl queue patch)